galex/tests/snapshots/snapshot_codegen__action_plain_params.snap
---
source: galex/tests/snapshot_codegen.rs
expression: action
---
//! Action handler: `addItem`.
//!
//! Generated by GaleX compiler — do not edit manually.


use axum::extract::Json;
use axum::http::StatusCode;

#[derive(Debug, serde::Deserialize)]
pub struct AddItemInput {
    pub name: String,
    pub count: i64,
}

/// POST /api/__gx/actions/addItem
pub async fn handler(
    Json(input): Json<AddItemInput>,
) -> Result<Json<serde_json::Value>, (StatusCode, Json<serde_json::Value>)> {
    let name = input.name;
    let count = input.count;

    // --- Action body ---

    Ok(Json(serde_json::json!(null)))
}
