galex/tests/snapshots/snapshot_codegen__action_with_guard.snap
---
source: galex/tests/snapshot_codegen.rs
expression: action
---
//! Action handler: `createUser`.
//!
//! Generated by GaleX compiler — do not edit manually.


use axum::extract::Json;
use axum::http::StatusCode;
use crate::guards::user_form::UserForm;
use crate::shared::validation::Validate;
use crate::shared::validation::Sanitize;

/// POST /api/__gx/actions/createUser
pub async fn handler(
    Json(mut input): Json<UserForm>,
) -> Result<Json<serde_json::Value>, (StatusCode, Json<serde_json::Value>)> {
    input.sanitize();
    if let Err(errors) = input.validate() {
        return Err((StatusCode::BAD_REQUEST, Json(serde_json::json!({
            "error": "validation_failed",
            "details": errors,
        }))));
    }

    let data = input;

    // --- Action body ---

    Ok(Json(serde_json::json!(null)))
}
