galex/tests/snapshots/snapshot_codegen__api_resource.snap
---
source: galex/tests/snapshot_codegen.rs
expression: api
---
//! API resource: `Users`.
//!
//! Generated by GaleX compiler — do not edit manually.


use axum::extract::Json;
use axum::http::StatusCode;
use axum::extract::Path;

#[derive(Debug, serde::Deserialize)]
pub struct UsersCreateInput {
    pub name: String,
}

/// GET /api/users
pub async fn list() -> Result<Json<serde_json::Value>, (StatusCode, Json<serde_json::Value>)> {
    // --- Handler body ---

    Ok(Json(serde_json::json!(null)))
}

/// POST /api/users
pub async fn create(Json(input): Json<String>) -> Result<(StatusCode, Json<serde_json::Value>), (StatusCode, Json<serde_json::Value>)> {
    let name = input;

    // --- Handler body ---

    Ok((StatusCode::CREATED, Json(serde_json::json!(null))))
}

/// DELETE /api/users/:id
pub async fn delete_by_id(Path(id): Path<String>) -> StatusCode {
    // --- Handler body ---

    StatusCode::NO_CONTENT
}
