galex/tests/snapshots/snapshot_codegen__cargo_toml_without_regex.snap
---
source: galex/tests/snapshot_codegen.rs
expression: toml
---
[package]
name = "no_regex_app"
version = "0.1.0"
edition = "2021"
# Generated by GaleX compiler — do not edit manually.

[workspace]

[dependencies]
gale = { path = "../" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
