galex/tests/snapshots/snapshot_codegen__channel_bidirectional.snap
---
source: galex/tests/snapshot_codegen.rs
expression: channel
---
//! WebSocket channel: `Chat`.
//!
//! Generated by GaleX compiler — do not edit manually.


use axum::extract::ws::{Message, WebSocket, WebSocketUpgrade};
use axum::extract::State;
use axum::response::IntoResponse;
use std::sync::Arc;
use tokio::sync::broadcast;

/// Shared broadcast state for this channel.
/// 
/// Each connected client subscribes to the broadcast channel.
/// Messages sent by any client are relayed to all subscribers.
pub struct ChatState {
    pub tx: broadcast::Sender<String>,
}

impl ChatState {
    /// Create a new channel state with a broadcast buffer of 256 messages.
    pub fn new() -> Arc<Self> {
        let (tx, _) = broadcast::channel(256);
        Arc::new(Self { tx })
    }
}


/// GET /ws/__gx/channels/Chat
/// 
/// Upgrades the HTTP connection to a WebSocket.
pub async fn handler(
    ws: WebSocketUpgrade,
    State(state): State<Arc<ChatState>>,
) -> impl IntoResponse {
    ws.on_upgrade(move |socket| handle_socket(socket, state))
}

async fn handle_socket(mut socket: WebSocket, state: Arc<ChatState>) {
    let mut rx = state.tx.subscribe();

    // --- on connect ---

    // --- bidirectional message loop ---
    loop {
        tokio::select! {
            msg = socket.recv() => {
                match msg {
                    Some(Ok(Message::Text(text))) => {
                        let msg = text.to_string();
                        let _ = state.tx.send(text.to_string());
                    }
                    Some(Ok(Message::Close(_))) | None => break,
                    _ => {}
                }
            }
            msg = rx.recv() => {
                if let Ok(text) = msg {
                    if socket.send(Message::Text(text.into())).await.is_err() {
                        break;
                    }
                }
            }
        }
    }

    // --- on disconnect ---

}
