galex/tests/snapshots/snapshot_codegen__channel_server_to_client.snap
---
source: galex/tests/snapshot_codegen.rs
expression: channel
---
//! WebSocket channel: `Ticker`.
//!
//! Generated by GaleX compiler — do not edit manually.


use axum::extract::ws::{Message, WebSocket, WebSocketUpgrade};
use axum::extract::State;
use axum::response::IntoResponse;
use std::sync::Arc;
use tokio::sync::broadcast;

/// Shared broadcast state for this channel.
/// 
/// Each connected client subscribes to the broadcast channel.
/// Messages sent by any client are relayed to all subscribers.
pub struct TickerState {
    pub tx: broadcast::Sender<String>,
}

impl TickerState {
    /// Create a new channel state with a broadcast buffer of 256 messages.
    pub fn new() -> Arc<Self> {
        let (tx, _) = broadcast::channel(256);
        Arc::new(Self { tx })
    }
}


/// GET /ws/__gx/channels/Ticker
/// 
/// Upgrades the HTTP connection to a WebSocket.
pub async fn handler(
    ws: WebSocketUpgrade,
    State(state): State<Arc<TickerState>>,
) -> impl IntoResponse {
    ws.on_upgrade(move |socket| handle_socket(socket, state))
}

async fn handle_socket(mut socket: WebSocket, state: Arc<TickerState>) {
    let mut rx = state.tx.subscribe();

    // --- server-to-client relay loop ---
    loop {
        match rx.recv().await {
            Ok(text) => {
                if socket.send(Message::Text(text.into())).await.is_err() {
                    break;
                }
            }
            Err(_) => break,
        }
    }

}
