galex/tests/snapshots/snapshot_codegen__guard_simple.snap
---
source: galex/tests/snapshot_codegen.rs
expression: guard
---
//! Guard validator: `LoginForm`.
//!
//! Generated by GaleX compiler — do not edit manually.


use serde::{Deserialize, Serialize};
use crate::shared::validation::{ValidationError, Validate};

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct LoginForm {
    pub email: String,
    pub password: String,
}

impl Validate for LoginForm {
    fn validate(&self) -> Result<(), Vec<ValidationError>> {
        let mut errors = Vec::new();

        if errors.is_empty() {
            Ok(())
        }
        else {
            Err(errors)
        }
    }
}
