galex/tests/snapshots/snapshot_codegen__guard_with_validators.snap
---
source: galex/tests/snapshot_codegen.rs
expression: guard
---
//! Guard validator: `UserForm`.
//!
//! Generated by GaleX compiler — do not edit manually.


use serde::{Deserialize, Serialize};
use crate::shared::validation::{ValidationError, Validate};
use crate::shared::validation::Sanitize;
use std::sync::LazyLock;

static EMAIL_RE: LazyLock<regex::Regex> = LazyLock::new(|| regex::Regex::new(r"^[^@\s]+@[^@\s]+\.[^@\s]+$").unwrap());

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct UserForm {
    pub email: String,
    pub name: String,
    pub age: i64,
}

impl Validate for UserForm {
    fn validate(&self) -> Result<(), Vec<ValidationError>> {
        let mut errors = Vec::new();

        // --- field: email ---
        if !EMAIL_RE.is_match(&self.email) {
            errors.push(ValidationError::new("email", "must be a valid email address"));
        }

        // --- field: name ---
        if self.name.len() < 2 {
            errors.push(ValidationError::new("name", "must be at least 2 character(s)"));
        }
        if self.name.len() > 100 {
            errors.push(ValidationError::new("name", "must be at most 100 character(s)"));
        }

        // --- field: age ---
        if self.age < 0 || self.age > 150 {
            errors.push(ValidationError::new("age", "must be between 0 and 150"));
        }

        if errors.is_empty() {
            Ok(())
        }
        else {
            Err(errors)
        }
    }
}

impl Sanitize for UserForm {
    fn sanitize(&mut self) {
        self.email = self.email.trim().to_string();
    }
}
