galex/tests/snapshots/snapshot_codegen__layout_default.snap
---
source: galex/tests/snapshot_codegen.rs
expression: layout
---
//! Default page layout (no explicit layout declared).
//!
//! Generated by GaleX compiler — do not edit manually.


pub fn render(head_html: &str, body_html: &str) -> String {
    let mut html = String::with_capacity(4096);
    html.push_str("<!DOCTYPE html>");
    html.push_str("<html lang=\"en\">");
    html.push_str("<head>");
    html.push_str("<meta charset=\"utf-8\">");
    html.push_str("<meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">");
    html.push_str(&crate::asset_manifest::import_map_tag());
    html.push_str(&format!("<link rel=\"stylesheet\" href=\"/{}\">"
        , crate::asset_manifest::resolve("_gale/styles.css")));
    html.push_str(&format!("<link rel=\"stylesheet\" href=\"/{}\">"
        , crate::asset_manifest::resolve("_gale/transitions.css")));
    html.push_str(head_html);
    html.push_str("</head>");
    html.push_str("<body>");
    html.push_str(body_html);
    html.push_str("</body>");
    html.push_str("</html>");
    html
}
