galex/tests/snapshots/snapshot_codegen__main_rs_full_project.snap
---
source: galex/tests/snapshot_codegen.rs
expression: main
---
//! Server entry point.
//!
//! Generated by GaleX compiler — do not edit manually.


extern crate gale_lib as gale;

mod actions;
mod guards;
mod channels;
mod shared;
mod routes;
mod layout;
mod gale_ssr;
mod api;
mod asset_manifest;

use gale::config::Config;

#[tokio::main]
async fn main() {
    let config = Config::load();
    gale::logging::init(&config.logging);

    let app = build_router();

    // Delegate to Gale's server infrastructure
    // (handles middleware, TLS, graceful shutdown)
    gale::server::run_with_app(config, app).await;
}

fn build_router() -> axum::Router {
    axum::Router::new()
        .route("/", axum::routing::get(routes::home_page::handler))
        .route("/about", axum::routing::get(routes::about::handler))
        .route("/__gx/pages/home_page.json", axum::routing::get(routes::home_page::json_handler))
        .route("/__gx/pages/about.json", axum::routing::get(routes::about::json_handler))
        .route("/api/__gx/actions/createUser", axum::routing::post(actions::create_user::handler))
        .route("/ws/__gx/channels/Chat", axum::routing::get(channels::chat::handler).with_state(channels::chat::ChatState::new()))
        .route("/api/users", axum::routing::get(api::users::list).post(api::users::create))
}
