galex/tests/snapshots/snapshot_codegen__route_dynamic.snap
---
source: galex/tests/snapshot_codegen.rs
expression: route
---
//! Route handler for component: `BlogPost[slug]`.
//!
//! Generated by GaleX compiler — do not edit manually.


use axum::response::Html;

/// Axum route handler for `BlogPost[slug]`.
pub async fn handler(axum::extract::Path(slug): axum::extract::Path<String>) -> Html<String> {
    let head_html = render_head();
    let body_html = render_body();

    Html(crate::layout::render(&head_html, &body_html))
}

/// JSON handler for client-side navigation.
pub async fn json_handler(axum::extract::Path(slug): axum::extract::Path<String>) -> axum::Json<serde_json::Value> {
    let body_html = render_body();

    axum::Json(serde_json::json!({ "html": body_html }))
}

fn render_head() -> String {
    String::new()
}

fn render_body() -> String {
    let mut html = String::with_capacity(2048);
    html.push_str("Post content");
    html
}
